--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <!-- Tools Section -->
         <section id="tools-section">
             <!-- Image Compressor -->
-<a href="/imgcompress.html" class="tool-card">
+<a href="/img-compress.html" class="tool-card">
     <div>
         <i class="fas fa-image"></i>
         <h2>Image Compressor</h2>
