--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
             <!-- Video Compressor -->
             <div class="tool-card">
-                <a href="video-compressor.html">
+                <a href="/Hafiz-Tools/vid-Compress.html">
                     <i class="fas fa-video"></i>
                     <h2>Video Compressor</h2>
                     <p>Reduce video size without losing quality.</p>
