--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
             <!-- Audio Compressor -->
             <div class="tool-card">
-                <a href="audio-compressor.html">
+                <a href="/Hafiz-Tools/aud-compress.html">
                     <i class="fas fa-music"></i>
                     <h2>Audio Compressor</h2>
                     <p>Compress audio files for easy sharing.</p>
@@ -166,7 +166,7 @@
 
             <!-- PDF Compressor -->
             <div class="tool-card">
-                <a href="pdf-compressor.html">
+                <a href="/Hafiz-Tools/pdf-Compress.html">
                     <i class="fas fa-file-pdf"></i>
                     <h2>PDF Compressor</h2>
                     <p>Reduce PDF file size efficiently.</p>
