--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
             <!-- Image to PDF Converter -->
             <div class="tool-card">
-                <a href="image-to-pdf.html">
+                <a href="/Hafiz-Tools/image-to-pdf.html">
                     <i class="fas fa-file-image"></i>
                     <h2>Image to PDF</h2>
                     <p>Convert images to PDF in seconds.</p>
