--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
             <!-- Audio Compressor -->
             <div class="tool-card">
-                <a href="/Hafiz-Tools/aud-compress.html">
+                <a href="/Hafiz-Tools/aud-Compress.html">
                     <i class="fas fa-music"></i>
                     <h2>Audio Compressor</h2>
                     <p>Compress audio files for easy sharing.</p>
@@ -175,7 +175,7 @@
 
             <!-- Image to PDF Converter -->
             <div class="tool-card">
-                <a href="/Hafiz-Tools/image-to-pdf.html">
+                <a href="/Hafiz-Tools/img-to-pdf.html">
                     <i class="fas fa-file-image"></i>
                     <h2>Image to PDF</h2>
                     <p>Convert images to PDF in seconds.</p>
