--- a/index.html
+++ b/index.html
@@ -185,10 +185,10 @@
     </main>
     <footer>
         <div>
-            <a href="privacy-policy.html">Privacy Policy</a>
-            <a href="about-us.html">About Us</a>
-            <a href="contact-us.html">Contact Us</a>
-            <a href="terms-of-service.html">Terms of Service</a>
+            <a href="/Hafiz-Tools/Privacy.html">Privacy Policy</a>
+            <a href="/Hafiz-Tools/About.html">About Us</a>
+            <a href="/Hafiz-Tools/Contact.html">Contact Us</a>
+            <a href="/Hafiz-Tools/Terms.html">Terms of Service</a>
         </div>
         <p>&copy; 2023 Hafiz Tools. All rights reserved.</p>
     </footer>
