--- a/Privacy.html
+++ b/Privacy.html
@@ -3,20 +3,73 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy</title>
+    <meta name="description" content="Read our Privacy Policy to understand how we handle your data.">
+    <meta name="keywords" content="privacy policy, Hafiz Tools, data handling">
+    <meta name="author" content="Your Name">
+    <title>Privacy Policy - Hafiz Tools</title>
     <style>
-        body { font-family: Arial, sans-serif; margin: 0; padding: 20px; background-color: #f4f4f4; }
-        .container { max-width: 800px; margin: auto; background: white; padding: 20px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); }
-        h1 { color: #333; text-align: center; }
-        p { line-height: 1.6; }
+        /* General Styles */
+        body {
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f9f9f9;
+            color: #333;
+        }
+
+        header {
+            background-color: #4CAF50;
+            color: white;
+            padding: 20px 0;
+            text-align: center;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+
+        main {
+            padding: 20px;
+            max-width: 800px;
+            margin: 0 auto;
+        }
+
+        h2 {
+            color: #4CAF50;
+        }
+
+        p {
+            line-height: 1.6;
+        }
+
+        footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 10px 0;
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
-
-    <div class="container">
+    <header>
         <h1>Privacy Policy</h1>
-        <p>Your privacy is important to us. We do not share your personal information with third parties. By using our website, you agree to our data collection practices.</p>
-    </div>
+    </header>
+    <main>
+        <h2>Introduction</h2>
+        <p>At Hafiz Tools, we are committed to protecting your privacy. This Privacy Policy explains how we collect, use, and safeguard your information when you use our services.</p>
 
+        <h2>Information We Collect</h2>
+        <p>We may collect personal information such as your name, email address, and usage data when you interact with our website or tools.</p>
+
+        <h2>How We Use Your Information</h2>
+        <p>We use your information to improve our services, respond to your inquiries, and provide a personalized experience.</p>
+
+        <h2>Data Security</h2>
+        <p>We implement industry-standard security measures to protect your data from unauthorized access or disclosure.</p>
+
+        <h2>Changes to This Policy</h2>
+        <p>We may update this Privacy Policy from time to time. Any changes will be posted on this page.</p>
+    </main>
+    <footer>
+        <p>&copy; 2023 Hafiz Tools. All rights reserved.</p>
+    </footer>
 </body>
 </html>
