--- a/Terms.html
+++ b/Terms.html
@@ -3,20 +3,73 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terms of Service</title>
+    <meta name="description" content="Read our Terms and Conditions to understand the rules for using our services.">
+    <meta name="keywords" content="terms and conditions, Hafiz Tools, rules">
+    <meta name="author" content="Your Name">
+    <title>Terms & Conditions - Hafiz Tools</title>
     <style>
-        body { font-family: Arial, sans-serif; margin: 0; padding: 20px; background-color: #f4f4f4; }
-        .container { max-width: 800px; margin: auto; background: white; padding: 20px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); }
-        h1 { color: #333; text-align: center; }
-        p { line-height: 1.6; }
+        /* General Styles */
+        body {
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f9f9f9;
+            color: #333;
+        }
+
+        header {
+            background-color: #4CAF50;
+            color: white;
+            padding: 20px 0;
+            text-align: center;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+
+        main {
+            padding: 20px;
+            max-width: 800px;
+            margin: 0 auto;
+        }
+
+        h2 {
+            color: #4CAF50;
+        }
+
+        p {
+            line-height: 1.6;
+        }
+
+        footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 10px 0;
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
+    <header>
+        <h1>Terms & Conditions</h1>
+    </header>
+    <main>
+        <h2>Introduction</h2>
+        <p>By using Hafiz Tools, you agree to these Terms and Conditions. Please read them carefully before using our services.</p>
 
-    <div class="container">
-        <h1>Terms of Service</h1>
-        <p>By using our website, you agree to follow our terms and conditions. We reserve the right to modify these terms at any time.</p>
-    </div>
+        <h2>Use of Services</h2>
+        <p>Our tools are provided for personal and non-commercial use only. You may not use our services for any illegal or unauthorized purpose.</p>
 
+        <h2>Intellectual Property</h2>
+        <p>All content and features on our website are the property of Hafiz Tools and are protected by intellectual property laws.</p>
+
+        <h2>Limitation of Liability</h2>
+        <p>We are not liable for any damages arising from the use of our services. Use our tools at your own risk.</p>
+
+        <h2>Changes to Terms</h2>
+        <p>We reserve the right to modify these Terms and Conditions at any time. Your continued use of our services constitutes acceptance of the updated terms.</p>
+    </main>
+    <footer>
+        <p>&copy; 2023 Hafiz Tools. All rights reserved.</p>
+    </footer>
 </body>
 </html>
